PATH variable manipulation in the installer
Signed-off-by: Rodolfo Conde <aragorn@ciencias.unam.mx>

--- a/OBTUtilsSDKInstaller/Files.wxs
+++ b/OBTUtilsSDKInstaller/Files.wxs
@@ -44,6 +44,11 @@
 						      Name="OBTMultSQLCodeGen.exe"
 						      Source="..\Database\OBTMultSQLCodeGen\$(var.BasicBuildDir)\OBTMultSQLCodeGen.exe"
 						      KeyPath="yes" />
+						
+						<Environment Id="PATH" Name="PATH"
+						             Value="[INSTALLDIR]" Permanent="no"
+						             Part="last" Action="set"
+						             System="yes" />
 					</Component>
 					
 					<Component Id="OBTUtilsEnterpriseComp"
